# basesociety

./: .gitignore  README.md  package.json
basesociety/: README.md  package-lock.json  package.json  pnpm-lock.yaml
basesociety/app/: globals.css  layout.tsx  page.tsx
basesociety/app/create/: page.tsx
basesociety/app/dashboard/: page.tsx
basesociety/components/: agent-history.tsx  agent-stats.tsx  create-agent-form.tsx  providers.tsx  wallet-connect.tsx
basesociety/lib/: agent-nft-abi.ts  config.ts  types.ts  wagmi-config.ts  wallet-context.tsx
contracts/: README.md  decay_oracle.md  erc-expansion.md
contracts/broadcast/Deploy.s.sol/84532/: run-1761291350.json
contracts/script/: Deploy.s.sol
contracts/src/: AgentsNFT.sol  DecayOracle.sol  MockDataVerifier.sol  Utils.sol
contracts/src/interfaces/: IAgentProfile.sol  IERC7857.sol  IERC7857DataVerifier.sol  IERC7857Metadata.sol
infra/: Cargo.toml  README.md  agents.db  contracts_README.md
infra/crates/ai_execution/: Cargo.toml  TODO.md  agents.db  agents.db-shm  agents.db-wal
infra/crates/ai_execution/migrations/: 20251024120000_create_agents_table.sql  20251024180000_add_last_interact_ts.sql  20251024222500_add_profile.sql  20251025030000_add_token_id.sql
infra/crates/ai_execution/src/: handlers.rs  main.rs  models.rs
infra/crates/oracle_service/: Cargo.toml  TODO.md
infra/crates/oracle_service/abis/: AgentNFT.json  DecayOracle.json
infra/crates/oracle_service/src/: blockchain.rs  config.rs  db.rs  main.rs  service.rs
