[package]
name = "ai_execution"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.6", features = ["macros"]}
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
rand = "0.9.2"
reqwest = "0.12.24"
rig-core = "0.22.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "migrate"]  }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
