[package]
name = "ai_execution"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
chrono.workspace = true
futures.workspace = true
rand = "0.9.2"
reqwest.workspace = true
rig-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true