[package]
name = "oracle_service"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.41"
dotenvy = "0.15.7"
eyre = "0.6.12"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
