[package]
name = "oracle_service"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true